[gd_scene load_steps=32 format=4 uid="uid://bgiob2v1uv2dh"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_30ynn"]
[ext_resource type="Script" path="res://scenes/menuscroll.gd" id="1_yd5wr"]
[ext_resource type="Texture2D" uid="uid://bvv80j5gsg18u" path="res://art/background/farm/gradient.png" id="3_gtr5f"]
[ext_resource type="Texture2D" uid="uid://b8x0522dm1bkk" path="res://art/background/new_ocean_wide.png" id="4_w3xms"]
[ext_resource type="Texture2D" uid="uid://fl58856wfdas" path="res://art/background/farm/windmills.png" id="5_lvls0"]
[ext_resource type="Texture2D" uid="uid://dfqi7ie5i5jod" path="res://art/menus/title/title_banner.png" id="6_uqe5a"]
[ext_resource type="TileSet" uid="uid://dk0epobpv3106" path="res://art/tilesets/ranch_platform.tres" id="7_xn6y6"]
[ext_resource type="Texture2D" uid="uid://csr5qbvq6sbdq" path="res://art/menus/arcade_button.png" id="8_dwm72"]
[ext_resource type="Theme" uid="uid://bu5rw7q8ykpqo" path="res://Themes/upgrademenu_tooltip.tres" id="8_eoi8s"]
[ext_resource type="Texture2D" uid="uid://dagpr080bh2rt" path="res://art/menus/adventure_button.png" id="8_pmqfi"]
[ext_resource type="Texture2D" uid="uid://dgoq6dln3jdd" path="res://art/menus/adventure_button_hover.png" id="9_r6a6p"]
[ext_resource type="Texture2D" uid="uid://clmd0qmx8n1e0" path="res://art/menus/title.png" id="9_vdy41"]
[ext_resource type="Texture2D" uid="uid://gqe7cq10b1kj" path="res://art/menus/arcade_button_hover.png" id="10_l4ph2"]
[ext_resource type="Texture2D" uid="uid://bkfptpjqdydbe" path="res://art/menus/buttons/mainmenu/main_submenu_achievements.png" id="18_170e7"]
[ext_resource type="Texture2D" uid="uid://b8x0sd77x1mbu" path="res://art/menus/buttons/mainmenu/main_submenu_house.png" id="18_rnp76"]
[ext_resource type="Texture2D" uid="uid://c5k1rm62lpvw7" path="res://art/menus/buttons/mainmenu/main_submenu_achievements_hover.png" id="19_nosng"]
[ext_resource type="Texture2D" uid="uid://c6k4so1jxkqo8" path="res://art/menus/buttons/mainmenu/main_submenu_house_hover.png" id="19_y5yev"]
[ext_resource type="Texture2D" uid="uid://ba0cfbwrum172" path="res://art/menus/buttons/button_bubble.png" id="21_cdl8e"]
[ext_resource type="Texture2D" uid="uid://cf1n3rqhus1bk" path="res://art/menus/buttons/button_bubble_hover.png" id="22_2rtd8"]
[ext_resource type="Texture2D" uid="uid://dsctnsdtd3bvx" path="res://art/menus/buttons/mainmenu/main_submenu_about.png" id="22_cyi5m"]
[ext_resource type="Texture2D" uid="uid://dvovt5m1jsfql" path="res://art/menus/buttons/mainmenu/main_submenu_about_hover.png" id="23_k6mj4"]
[ext_resource type="Shader" path="res://scenes/main_menu.gdshader" id="25_wjxn3"]
[ext_resource type="PackedScene" uid="uid://cbkv2efk4a42u" path="res://scenes/levels/platformer/player_setup.tscn" id="26_cgeq4"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_3jlxs"]

[sub_resource type="Animation" id="Animation_qmasw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ParallaxBackground/BG:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_pjdkv"]
resource_name = "bg_fade"
length = 16.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ParallaxBackground/BG:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 7.5, 8, 15.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0.121569, 0.121569, 0.223529, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(0.121569, 0.121569, 0.223529, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 8, 16),
"transitions": PackedFloat32Array(1, 2, 0.5),
"update": 0,
"values": [-0.0872665, 0.0872665, -0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s286s"]
_data = {
"RESET": SubResource("Animation_qmasw"),
"bg_fade": SubResource("Animation_pjdkv")
}

[sub_resource type="Animation" id="Animation_tmbmh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.25, 1.25)]
}

[sub_resource type="Animation" id="Animation_ovt5l"]
resource_name = "hover"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.25, 1.25), Vector2(1.5, 1.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ammnr"]
_data = {
"RESET": SubResource("Animation_tmbmh"),
"hover": SubResource("Animation_ovt5l")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4oowm"]
shader = ExtResource("25_wjxn3")
shader_parameter/strength = 0.1

[node name="mainmenu" type="Node2D"]
script = ExtResource("1_30ynn")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("1_yd5wr")

[node name="BG" type="Sprite2D" parent="ParallaxBackground"]
texture = ExtResource("3_gtr5f")
centered = false
region_rect = Rect2(0, 0, 480, 380)

[node name="Layer1" type="ParallaxLayer" parent="ParallaxBackground"]
texture_repeat = 2
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(960, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Layer1"]
texture = ExtResource("4_w3xms")
centered = false
offset = Vector2(0, 400)
metadata/_edit_lock_ = true

[node name="Layer2" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Layer2"]
texture = ExtResource("5_lvls0")
centered = false
metadata/_edit_lock_ = true

[node name="Banner" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_mirroring = Vector2(480, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Banner"]
texture = ExtResource("6_uqe5a")
centered = false

[node name="Silly" type="Node2D" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD//xMAAgABAAIAAAD//xQAAgABAAMAAAD//xUAAgABAAQAAAD//xYAAgABAAUAAAAAABMAAgABAAIAAAAAABQAAgABAAMAAAAAABUAAgABAAQAAAAAABYAAgABAAUAAAABABMAAgABAAIAAAABABQAAgABAAMAAAABABUAAgABAAQAAAABABYAAgABAAUAAAACABMAAgABAAIAAAACABQAAgABAAMAAAACABUAAgABAAQAAAACABYAAgABAAUAAAADABMAAgABAAIAAAADABQAAgABAAMAAAADABUAAgABAAQAAAADABYAAgABAAUAAAAEABMAAgABAAIAAAAEABQAAgABAAMAAAAEABUAAgABAAQAAAAEABYAAgABAAUAAAAFABMAAgABAAIAAAAFABQAAgABAAMAAAAFABUAAgABAAQAAAAFABYAAgABAAUAAAAGABMAAgABAAIAAAAGABQAAgABAAMAAAAGABUAAgABAAQAAAAGABYAAgABAAUAAAAHABMAAgABAAIAAAAHABQAAgABAAMAAAAHABUAAgAGAAcAAAAHABYAAgABAAUAAAAIABMAAgABAAUAAAAIABQAAgABAAUAAAAIABUAAgABAAUAAAAIABYAAgABAAUAAAAJABMAAgABAAUAAAAJABQAAgABAAUAAAAJABUAAgABAAUAAAAJABYAAgABAAUAAAAKABMAAgABAAUAAAAKABQAAgABAAUAAAAKABUAAgABAAUAAAAKABYAAgABAAUAAAALABMAAgABAAUAAAALABQAAgABAAUAAAALABUAAgABAAUAAAALABYAAgABAAUAAAAMABMAAgABAAUAAAAMABQAAgABAAUAAAAMABUAAgABAAUAAAAMABYAAgABAAUAAAANABMAAgABAAUAAAANABQAAgABAAUAAAANABUAAgABAAUAAAANABYAAgABAAUAAAAOABMAAgABAAUAAAAOABQAAgABAAUAAAAOABUAAgABAAUAAAAOABYAAgABAAUAAAAPABMAAgABAAUAAAAPABQAAgABAAUAAAAPABUAAgABAAUAAAAPABYAAgABAAUAAAAQABMAAgABAAUAAAAQABQAAgABAAUAAAAQABUAAgABAAUAAAAQABYAAgABAAUAAAARABMAAgABAAUAAAARABQAAgABAAUAAAARABUAAgABAAUAAAARABYAAgABAAUAAAASABMAAgABAAUAAAASABQAAgABAAUAAAASABUAAgABAAUAAAASABYAAgABAAUAAAATABMAAgABAAUAAAATABQAAgABAAUAAAATABUAAgABAAUAAAATABYAAgABAAUAAAAUABMAAgABAAUAAAAUABQAAgABAAUAAAAUABUAAgABAAUAAAAUABYAAgABAAUAAAAVABMAAgABAAUAAAAVABQAAgABAAUAAAAVABUAAgABAAUAAAAVABYAAgABAAUAAAAWABMAAgABAAUAAAAWABQAAgABAAUAAAAWABUAAgABAAUAAAAWABYAAgABAAUAAAAXABMAAgABAAUAAAAXABQAAgABAAUAAAAXABUAAgABAAUAAAAXABYAAgABAAUAAAAYABMAAgABAAUAAAAYABQAAgABAAUAAAAYABUAAgABAAUAAAAYABYAAgABAAUAAAAZABMAAgABAAUAAAAZABQAAgABAAUAAAAZABUAAgABAAUAAAAZABYAAgABAAUAAAAaABMAAgABAAUAAAAaABQAAgABAAUAAAAaABUAAgABAAUAAAAaABYAAgABAAUAAAAbABMAAgABAAUAAAAbABQAAgABAAUAAAAbABUAAgABAAUAAAAbABYAAgABAAUAAAAcABMAAgABAAUAAAAcABQAAgABAAUAAAAcABUAAgABAAUAAAAcABYAAgABAAUAAAAdABMAAgABAAUAAAAdABQAAgABAAUAAAAdABUAAgABAAUAAAAdABYAAgABAAUAAAAeABMAAgABAAUAAAAeABQAAgABAAUAAAAeABUAAgABAAUAAAAeABYAAgABAAUAAAAfABMAAgABAAUAAAAfABQAAgABAAUAAAAfABUAAgABAAUAAAAfABYAAgABAAUAAAAgABMAAgABAAIAAAAgABQAAgABAAMAAAAgABUAAgAHAAcAAAAgABYAAgABAAUAAAAhABMAAgABAAIAAAAhABQAAgABAAMAAAAhABUAAgABAAQAAAAhABYAAgABAAUAAAAiABMAAgABAAIAAAAiABQAAgABAAMAAAAiABUAAgABAAQAAAAiABYAAgABAAUAAAAjABMAAgABAAIAAAAjABQAAgABAAMAAAAjABUAAgABAAQAAAAjABYAAgABAAUAAAAkABMAAgABAAIAAAAkABQAAgABAAMAAAAkABUAAgABAAQAAAAkABYAAgABAAUAAAAlABMAAgABAAIAAAAlABQAAgABAAMAAAAlABUAAgABAAQAAAAlABYAAgABAAUAAAAmABMAAgABAAIAAAAmABQAAgABAAMAAAAmABUAAgABAAQAAAAmABYAAgABAAUAAAAnABMAAgABAAIAAAAnABQAAgABAAMAAAAnABUAAgABAAQAAAAnABYAAgABAAUAAAAoABMAAgABAAIAAAAoABQAAgABAAMAAAAoABUAAgABAAQAAAAoABYAAgABAAUAAAAMAA8AAgAJAAAAAAAQAA8AAgABAAIAAAARAA8AAgABAAIAAAASAA8AAgABAAIAAAATAA8AAgABAAIAAAAUAA8AAgABAAIAAAAVAA8AAgABAAIAAAAWAA8AAgABAAIAAAAXAA8AAgABAAIAAAAYAA8AAgANAAAAAAAKABAAAgAJAAYAAAAcABAAAgALAAYAAAAJABEAAgACAAgAAAAIABIAAgADAAgAAAAfABIAAgAEAAgAAAAeABEAAgAFAAgAAAARABIAAgABAAUAAAASABIAAgABAAUAAAATABIAAgABAAUAAAAUABIAAgABAAUAAAAVABIAAgABAAUAAAAWABIAAgABAAUAAAAXABIAAgABAAUAAAAYABIAAgABAAUAAAAJABIAAgABAAUAAAAKABIAAgABAAUAAAALABIAAgABAAUAAAAMABIAAgABAAUAAAANABIAAgABAAUAAAAOABIAAgABAAUAAAAPABIAAgABAAUAAAAQABIAAgABAAUAAAAZABIAAgABAAUAAAAaABIAAgABAAUAAAAbABIAAgABAAUAAAAcABIAAgABAAUAAAAdABIAAgABAAUAAAAeABIAAgABAAUAAAAKABEAAgABAAQAAAALABEAAgABAAQAAAAMABEAAgABAAQAAAANABEAAgABAAQAAAAOABEAAgABAAQAAAAPABEAAgABAAQAAAAQABEAAgABAAQAAAARABEAAgABAAQAAAASABEAAgABAAQAAAATABEAAgABAAQAAAAUABEAAgABAAQAAAAVABEAAgABAAQAAAAWABEAAgABAAQAAAAXABEAAgABAAQAAAAYABEAAgABAAQAAAAZABEAAgABAAQAAAAaABEAAgABAAQAAAAbABEAAgABAAQAAAAcABEAAgABAAQAAAAdABEAAgABAAQAAAAMABAAAgABAAMAAAANABAAAgABAAMAAAAOABAAAgABAAMAAAAPABAAAgABAAMAAAAQABAAAgABAAMAAAARABAAAgABAAMAAAASABAAAgABAAMAAAATABAAAgABAAMAAAAUABAAAgABAAMAAAAVABAAAgABAAMAAAAWABAAAgABAAMAAAAXABAAAgABAAMAAAAYABAAAgABAAMAAAAZABAAAgABAAMAAAAaABAAAgABAAMAAAAbABAAAgABAAMAAAAAABIAAgAHAAAAAAABABIAAgAHAAAAAAACABIAAgAHAAAAAAADABIAAgAIAAAAAAAEABIAAgAGAAAAAAAFABIAAgAHAAAAAAAGABIAAgAIAAAAAAAiABIAAgAHAAAAAAAjABIAAgAHAAAAAAAkABIAAgAHAAAAAAAlABIAAgAHAAAAAAAhABIAAgAGAAAAAAAmABIAAgAIAAAAAAA=")
tile_set = ExtResource("7_xn6y6")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD//xMAAgABAAAAAAAAABMAAgACAAAAAAABABMAAgABAAAAAAACABMAAgACAAAAAAADABMAAgABAAAAAAAEABMAAgACAAAAAAAFABMAAgABAAAAAAAGABMAAgACAAAAAAAHABMAAgABAAAAAAAgABMAAgACAAAAAAAhABMAAgABAAAAAAAiABMAAgACAAAAAAAjABMAAgABAAAAAAAkABMAAgACAAAAAAAlABMAAgABAAAAAAAmABMAAgACAAAAAAAnABMAAgABAAAAAAAoABMAAgACAAAAAAAMAA8AAgAJAAEAAAAYAA8AAgANAAEAAAAKABAAAgAJAAMAAAAcABAAAgALAAMAAAAeABEAAgAIAAQAAAAfABIAAgAIAAQAAAAJABEAAgAIAAYAAAAIABIAAgAIAAYAAAAQAA8AAgABAAAAAAARAA8AAgACAAAAAAASAA8AAgABAAAAAAATAA8AAgACAAAAAAAUAA8AAgABAAAAAAAVAA8AAgACAAAAAAAWAA8AAgABAAAAAAAXAA8AAgACAAAAAAAQAA4AAgAEAAAAAAARAA4AAgAEAAAAAAASAA4AAgAEAAAAAAATAA4AAgAEAAAAAAAUAA4AAgAEAAAAAAAVAA4AAgAEAAAAAAAWAA4AAgAEAAAAAAAXAA4AAgAEAAAAAAAAABIAAgAEAAAAAAABABIAAgAEAAAAAAACABIAAgAEAAAAAAADABIAAgAEAAAAAAAEABIAAgAEAAAAAAAFABIAAgAEAAAAAAAGABIAAgAEAAAAAAAHABIAAgAEAAAAAAAgABIAAgAEAAAAAAAhABIAAgAEAAAAAAAiABIAAgAEAAAAAAAjABIAAgAEAAAAAAAkABIAAgAEAAAAAAAlABIAAgAEAAAAAAAmABIAAgAEAAAAAAAnABIAAgAEAAAAAAAoABIAAgAEAAAAAAD//xIAAgAEAAAAAAA=")
tile_set = ExtResource("7_xn6y6")

[node name="PlayerSetup" parent="." instance=ExtResource("26_cgeq4")]
position = Vector2(543, 354)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
rotation = 1.57079
shape = SubResource("WorldBoundaryShape2D_3jlxs")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(960, 0)
rotation = 4.71238
shape = SubResource("WorldBoundaryShape2D_3jlxs")

[node name="Label" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 524.0
offset_right = 209.0
offset_bottom = 546.0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Version 1.0.8 (beta)"

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(480, 77)
texture = ExtResource("9_vdy41")

[node name="ExtraVisuals" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s286s")
}
autoplay = "bg_fade"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 97.0
offset_right = 480.0
offset_bottom = 121.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 2.0
anchor_bottom = 1.0
offset_top = 384.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 80
alignment = 1

[node name="Achievements" type="TextureButton" parent="Control/HBoxContainer"]
layout_mode = 2
tooltip_text = "Achievements are planned, but not here yet"
focus_neighbor_left = NodePath("../About")
focus_neighbor_top = NodePath("../../SettingsButton")
focus_neighbor_right = NodePath("../House")
focus_neighbor_bottom = NodePath("../../Adventure")
focus_next = NodePath("../House")
focus_previous = NodePath("../../QuitButton")
theme = ExtResource("8_eoi8s")
texture_normal = ExtResource("18_170e7")
texture_hover = ExtResource("19_nosng")
texture_focused = ExtResource("19_nosng")

[node name="House" type="TextureButton" parent="Control/HBoxContainer"]
layout_mode = 2
tooltip_text = "House"
focus_neighbor_left = NodePath("../Achievements")
focus_neighbor_top = NodePath("../../SettingsButton")
focus_neighbor_right = NodePath("../About")
focus_neighbor_bottom = NodePath("../../Arcade")
focus_next = NodePath("../About")
focus_previous = NodePath("../Achievements")
theme = ExtResource("8_eoi8s")
texture_normal = ExtResource("18_rnp76")
texture_hover = ExtResource("19_y5yev")
texture_focused = ExtResource("19_y5yev")

[node name="About" type="TextureButton" parent="Control/HBoxContainer"]
layout_mode = 2
tooltip_text = "About"
focus_neighbor_left = NodePath("../House")
focus_neighbor_top = NodePath("../../SettingsButton")
focus_neighbor_right = NodePath("../Achievements")
focus_neighbor_bottom = NodePath("../../Arcade")
focus_next = NodePath("../../Adventure")
focus_previous = NodePath("../House")
theme = ExtResource("8_eoi8s")
texture_normal = ExtResource("22_cyi5m")
texture_hover = ExtResource("23_k6mj4")
texture_focused = ExtResource("23_k6mj4")

[node name="Adventure" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 325.0
offset_top = 89.0
offset_right = 445.0
offset_bottom = 209.0
scale = Vector2(1.25, 1.25)
pivot_offset = Vector2(60.8, 58.72)
focus_neighbor_left = NodePath("../Arcade")
focus_neighbor_top = NodePath("../HBoxContainer/House")
focus_neighbor_right = NodePath("../Arcade")
focus_neighbor_bottom = NodePath("../SettingsButton")
focus_next = NodePath("../Arcade")
focus_previous = NodePath("../HBoxContainer/About")
keep_pressed_outside = true
texture_normal = ExtResource("8_pmqfi")
texture_hover = ExtResource("9_r6a6p")
texture_focused = ExtResource("9_r6a6p")

[node name="Label" type="RichTextLabel" parent="Control/Adventure"]
clip_contents = false
layout_mode = 0
offset_left = 1.0
offset_top = 101.0
offset_right = 119.0
offset_bottom = 120.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[center]Adventure"
scroll_active = false

[node name="Label2" type="Label" parent="Control/Adventure"]
layout_mode = 0
offset_left = 5.6
offset_top = 75.2
offset_right = 217.6
offset_bottom = 97.2
rotation = -0.523598
scale = Vector2(0.566452, 0.566452)
text = "             NEW!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Adventure"]
libraries = {
"": SubResource("AnimationLibrary_ammnr")
}

[node name="Arcade" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 531.0
offset_top = 91.0
offset_right = 651.0
offset_bottom = 211.0
scale = Vector2(1.25, 1.25)
pivot_offset = Vector2(59.9999, 60)
focus_neighbor_left = NodePath("../Adventure")
focus_neighbor_top = NodePath("../HBoxContainer/House")
focus_neighbor_right = NodePath("../Adventure")
focus_neighbor_bottom = NodePath("../SettingsButton")
focus_next = NodePath("../SettingsButton")
focus_previous = NodePath("../Adventure")
texture_normal = ExtResource("8_dwm72")
texture_hover = ExtResource("10_l4ph2")
texture_focused = ExtResource("10_l4ph2")

[node name="Label" type="RichTextLabel" parent="Control/Arcade"]
clip_contents = false
layout_mode = 0
offset_left = 1.0
offset_top = 101.0
offset_right = 119.0
offset_bottom = 120.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[center]Arcade"
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Arcade"]
libraries = {
"": SubResource("AnimationLibrary_ammnr")
}

[node name="Label2" type="Label" parent="Control/Arcade"]
layout_mode = 0
offset_left = 5.6
offset_top = 75.2
offset_right = 217.6
offset_bottom = 97.2
rotation = -0.523598
scale = Vector2(0.566452, 0.566452)
text = "      DEPRECATED!"

[node name="SettingsButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 863.0
offset_top = 354.0
offset_right = 921.0
offset_bottom = 378.0
scale = Vector2(1.5, 1.5)
focus_neighbor_left = NodePath("../QuitButton")
focus_neighbor_top = NodePath("../Arcade")
focus_neighbor_right = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../HBoxContainer/House")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../Arcade")
theme = ExtResource("8_eoi8s")
texture_normal = ExtResource("21_cdl8e")
texture_hover = ExtResource("22_2rtd8")
texture_focused = ExtResource("22_2rtd8")

[node name="Label" type="RichTextLabel" parent="Control/SettingsButton"]
clip_contents = false
layout_mode = 0
offset_left = 1.0
offset_top = 8.0
offset_right = 96.0
offset_bottom = 28.0
scale = Vector2(0.6, 0.6)
mouse_filter = 2
bbcode_enabled = true
text = "[center]Settings"
scroll_active = false

[node name="QuitButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 863.0
offset_top = 396.0
offset_right = 921.0
offset_bottom = 420.0
scale = Vector2(1.5, 1.5)
focus_neighbor_left = NodePath("../SettingsButton")
focus_neighbor_top = NodePath("../Arcade")
focus_neighbor_right = NodePath("../SettingsButton")
focus_neighbor_bottom = NodePath("../HBoxContainer/House")
focus_next = NodePath("../HBoxContainer/Achievements")
focus_previous = NodePath("../SettingsButton")
theme = ExtResource("8_eoi8s")
texture_normal = ExtResource("21_cdl8e")
texture_hover = ExtResource("22_2rtd8")
texture_focused = ExtResource("22_2rtd8")

[node name="Label" type="RichTextLabel" parent="Control/QuitButton"]
clip_contents = false
layout_mode = 0
offset_left = 1.0
offset_top = 8.0
offset_right = 96.0
offset_bottom = 25.0
scale = Vector2(0.6, 0.6)
mouse_filter = 2
bbcode_enabled = true
text = "[center][img width=16]art/menus/buttons/power.png[/img] EXIT  "
scroll_active = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Effect" type="ColorRect" parent="CanvasLayer"]
visible = false
material = SubResource("ShaderMaterial_4oowm")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Sound" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="Control/QuitButton" to="." method="_on_quit_button_pressed"]
